# datamaestro_ir

./: .gitignore  README.md  cliff.toml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: pytest.yml  python-publish.yml
docs/source/: conf.py  getting_started.rst  index.rst  search-datasets.rst
docs/source/api/: conversation.rst  index.rst  ir.rst
docs/source/datasets/: conversation.rst  distillation.rst  index.rst  ir.rst  irds.rst
scripts/: compute_tipster_checksums.py
src/datamaestro_ir/: __init__.py
src/datamaestro_ir/config/ai/lighton/embeddings_pre_training/: __init__.py  denseon_lateon.py
src/datamaestro_ir/config/ca/uwaterloo/jimmylin/: anserini.py
src/datamaestro_ir/config/com/github/: ikat.py
src/datamaestro_ir/config/com/github/aagohary/: canard.py
src/datamaestro_ir/config/com/github/apple/: ml-qrecc.py
src/datamaestro_ir/config/com/github/hofstaetter/: distillation.py
src/datamaestro_ir/config/com/github/prdwb/: orconvqa.py
src/datamaestro_ir/config/com/github/sebastian-hofstaetter/: neural-ranking-kd.py
src/datamaestro_ir/config/com/github/webis-de/: rank-distillm.py
src/datamaestro_ir/config/com/microsoft/msmarco/: document.py  documentv2.py  passage.py  passagev2.py
src/datamaestro_ir/config/edu/stanford/lotte/: __init__.py
src/datamaestro_ir/config/edu/upenn/ldc/: aquaint.py
src/datamaestro_ir/config/gov/nist/ir/: covid.py
src/datamaestro_ir/config/gov/nist/trec/: adhoc.py  car.py  cast.py  tipster.py  wapo.py
src/datamaestro_ir/config/org/beir/: __init__.py
src/datamaestro_ir/config/org/facebook/: kilt.py
src/datamaestro_ir/data/: __init__.py  anserini.py  base.py  beir.py  cord19.py  csv.py  distillation.py  formats.py  huggingface.py  lighton.py  lotte.py  stores.py  trec.py
src/datamaestro_ir/data/conversation/: __init__.py  base.py  canard.py  cast.py  ikat.py  orconvqa.py  qrecc.py
src/datamaestro_ir/datasets/irds/: data.py
src/datamaestro_ir/download/: docstore.py
src/datamaestro_ir/interfaces/: trec.py
src/datamaestro_ir/test/: test_documented.py  test_lighton.py  test_streaming.py  test_streaming_docstore.py
src/datamaestro_ir/transforms/: __init__.py
src/datamaestro_ir/utils/: streaming.py
src/datamaestro_text/config/com/microsoft/msmarco/: passage.py
src/datamaestro_text/config/edu/stanford/lotte/: __init__.py
src/datamaestro_text/config/org/beir/: __init__.py
src/datamaestro_text/data/conversation/: base.py  canard.py  ikat.py  orconvqa.py  qrecc.py
src/datamaestro_text/data/ir/: __init__.py  base.py  beir.py  cord19.py  csv.py  lotte.py  stores.py  trec.py
src/datamaestro_text/datasets/irds/: data.py
src/datamaestro_text/interfaces/: trec.py
src/datamaestro_text/transforms/ir/: __init__.py
(+2 files in other folders)
