[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "datamaestro-ir"
authors = [
    {name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr"}
]
description = "Datamaestro module for Information Retrieval datasets"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["dataset manager", "information retrieval", "experiments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "datamaestro>=1.9.3",
    "ir_datasets>=0.5.8",
    "attrs",
    "experimaestro>=2.0.0",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/xpmir/datamaestro_ir"
Documentation = "https://datamaestro-ir.readthedocs.io/en/latest/"
Repository = "https://github.com/xpmir/datamaestro_ir"
"Bug Tracker" = "https://github.com/xpmir/datamaestro_ir/issues"

[project.entry-points."datamaestro.repositories"]
ir = "datamaestro_ir:Repository"
irds = "datamaestro_ir.datasets.irds:Repository"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/datamaestro_ir/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datamaestro_ir"]

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = ["src/datamaestro_ir"]
norecursedirs = ["node_modules"]

[dependency-groups]
dev = [
    "docutils>=0.21.2",
    "git-cliff>=2.11.0",
    "pytest>=8.4.1",
    "ruff>=0.8",
    "sphinx>=7",
    "sphobjinv>=2.3.1.3",
]
docs = [
    "datamaestro>=0.8.5",
    "myst-parser>=0.18.0",
    "sphinx>=8.1.3",
    "sphinx-codeautolink>=0.15.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-toolbox>=4.1.2",
]
ir = [
    "impact-index>=0.32.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 20
